Exe checker run fine